<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wmcalyj.point24.MainActivity">

    <LinearLayout
        android:id="@+id/level1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:contentDescription="@string/img_card1_content_description"/>
        <ImageView
            android:id="@+id/card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:contentDescription="@string/img_card2_content_description"/>
        <ImageView
            android:id="@+id/card3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:contentDescription="@string/img_card3_content_description"/>
        <ImageView
            android:id="@+id/card4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/img_card4_content_description"/>
    </LinearLayout>
    <TextView
        android:id="@+id/includeFaceCardsInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/level1"
        android:text="@string/include_face_cards_instruction"
        android:textSize="12sp"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/includeFaceCardsInstruction"
        android:hint="@string/answer_edit_text_hint"/>

    <Button
        android:id="@+id/checkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answerEditText"
        android:text="@string/check_result"/>
    <Button
        android:id="@+id/nextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/next_question"/>

    <Button
        android:id="@+id/seeAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/answerEditText"
        android:text="@string/see_answer"/>
    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkButton"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:textSize="40sp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultView">
        <include layout="@layout/numbers_with_signs"/>
    </RelativeLayout>

</RelativeLayout>
