<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <RadioGroup
        android:id="@+id/mode_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/mode_single_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_single_player"/>

        <RadioButton
            android:id="@+id/mode_two_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_two_players"/>

        <RadioButton
            android:id="@+id/mode_multi_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_multi_players"/>

        <RadioButton
            android:id="@+id/mode_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_user_input"/>

    </RadioGroup>

    <Button
        android:id="@+id/mode_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mode_radio_group"
        android:text="@string/mode_confirm"/>

</RelativeLayout>