<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wmcalyj.point24.activities.UserInputActivity">

    <TextView
        android:id="@+id/user_input_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/user_input_instruction"
        android:textSize="12sp"/>
    <LinearLayout
        android:id="@+id/user_input_nums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_input_instruction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/user_input_num_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:ems="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="60sp"/>
        <EditText
            android:id="@+id/user_input_num_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:ems="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="60sp"/>
        <EditText
            android:id="@+id/user_input_num_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="2"
            android:ems="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="60sp"/>
        <EditText
            android:id="@+id/user_input_num_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="60sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/user_input_check_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/user_input_nums"
        android:layout_below="@id/user_input_nums"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/check_user_input_answer"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/user_input_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/user_input_nums"
        android:layout_below="@id/user_input_nums"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/clear_user_input"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/user_input_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_input_keypad"
        android:layout_below="@id/user_input_check_answer_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:maxLines="3"
        android:scrollbars="vertical"
        android:textSize="30sp"/>

    <RelativeLayout
        android:id="@+id/user_input_keypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <include layout="@layout/numbers_no_signs"/>
    </RelativeLayout>

</RelativeLayout>
